# NFL-Helmet-Contact-Detection

./: .dockerignore  .gitignore  Dockerfile  Makefile  PROJECT_STATUS.md  QUICKSTART.sh  README.md  SETUP.md  app.py  fly.toml  pyproject.toml  render.yaml  verify_install.py
.github/workflows/: ci.yml
configs/: base.yaml  tiny.yaml
helmet_contact_detection/: .dockerignore  .gitignore  .railway.json  DEMO_RESULTS.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  RUN_DEMO.md  TESTING_GUIDE.md  demo_local.py  render.yaml  requirements.txt  test_api.py
helmet_contact_detection/app/: __init__.py  inference.py  main.py  schemas.py  utils.py
helmet_contact_detection/models/: .gitkeep  README.md
helmet_contact_detection/scripts/: download_kaggle_instructions.md  download_pretrained_yolo.py  explore_nfl_data.py  extract_frames.py  train_helmet_model.py
scripts/: build_crops_cache.py  download_data.py  evaluate.py  export_onnx.py  train.py
src/: collision_scoring.py  optical_flow_analysis.py  proximity_analysis.py  yolo_detection.py
src/impact_detector/: __init__.py  api.py  config.py  data_utils.py  dataset.py  inference.py  model.py
tests/: __init__.py  test_api.py  test_config.py  test_model.py
